# ir1-labs

./: .gitignore  13010840_13880527.ipynb  13010840_13880527_13659294_hw1.ipynb  13010840_13880527_hw1.ipynb  README.md  hw1.ipynb  hw1.py  hw2 (to be updated).ipynb  pyproject.toml  temp.ipynb
hw1/: requirements.txt
hw2/: 13010840_13880527.ipynb  ANS.md  dataset.py  dataset_old.py  evaluate.py  hw2.ipynb  hw2.py  requirements.txt
